# ml-monitor

./: .gitignore  README.md  pyproject.toml  run.py
mlruns/0/: meta.yaml
notebooks/: SCM-15.ipynb  SCM-16.ipynb  clustering_task.ipynb
src/: Dockerfile
src/scripts/: create_run.sh
src/utils/: config.yaml  trackers.py
